# RobotVoice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dsp.py  pyproject.toml  requirements.txt  server.py  setup.py  setup.sh  synthesis.py  test_effects.py
embeddings/: vctk-vits_fitted_CCA-5.sav  vctk-vits_fitted_PCA-5.sav  vctk-vits_fitted_standard_scaler.sav
src/robotvoice/: dsp.py  postprocess.py  server.py  synth.py  vits.py
src/robotvoice/effects/: fx.py  robot.py  voice.py
src/robotvoice/synthesizer/: base.py  vits.py
templates/: client.html
to_sort/: server.py  setup.sh  synthesis.py
vits/: models.py
